Fixed unclosed DIVs in the profile editor and resolved the footer being too close to the end of the page while editing.

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -8,6 +8,7 @@
   text-align:center;
     padding-top:25px;
     border-top:1px solid #ddd;
+	margin-top:50px;
 }
 
 .footer-address {
